force-app/main/default/objects/Event_Occasion_Insights__c/Event_Occasion_Insights__c.object-meta.xml
<CustomObject>
    <label>Event &amp; Occasion Insights</label>
    <nameField>
        <displayFormat>EOI-{0000}</displayFormat>
        <label>Event &amp; Occasion Insights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event &amp; Occasion Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>