force-app/main/default/objects/Event_Occasion_Insights__c/fields/Budget_Range_for_Occasion__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range_for_Occasion__c</fullName>
    <label>Budget Range for Occasion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>