force-app/main/default/objects/Event_Occasion_Insights__c/fields/Cultural_Occasion_Type__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Occasion_Type__c</fullName>
    <label>Cultural Occasion Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>