force-app/main/default/objects/Event_Occasion_Insights__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event &amp; Occasion Insights</relationshipLabel>
    <relationshipName>Event_Occasion_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>