force-app/main/default/objects/Event_Occasion_Insights__c/fields/Days_to_Occasion__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Occasion__c</fullName>
    <label>Days to Occasion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>