force-app/main/default/objects/Event_Occasion_Insights__c/fields/Event_Based_Buying_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Event_Based_Buying_Pattern__c</fullName>
    <label>Event-Based Buying Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>