force-app/main/default/objects/Event_Occasion_Insights__c/fields/Event_Purchase_Probability_Score__c.field-meta.xml
<CustomField>
    <fullName>Event_Purchase_Probability_Score__c</fullName>
    <label>Event Purchase Probability Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>