force-app/main/default/objects/Event_Occasion_Insights__c/fields/Festival_Affinity_Index__c.field-meta.xml
<CustomField>
    <fullName>Festival_Affinity_Index__c</fullName>
    <label>Festival Affinity Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>