force-app/main/default/objects/Event_Occasion_Insights__c/fields/Jewellery_Type_Preference_for_Occasion__c.field-meta.xml
<CustomField>
    <fullName>Jewellery_Type_Preference_for_Occasion__c</fullName>
    <label>Jewellery Type Preference for Occasion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>