force-app/main/default/objects/Event_Occasion_Insights__c/fields/Largest_Past_Occasion_Spend__c.field-meta.xml
<CustomField>
    <fullName>Largest_Past_Occasion_Spend__c</fullName>
    <label>Largest Past Occasion Spend</label>
    <length>255</length>
    <type>Text</type>
</CustomField>