force-app/main/default/objects/Event_Occasion_Insights__c/fields/Last_Event_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Event_Reminder_Sent__c</fullName>
    <label>Last Event Reminder Sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>