force-app/main/default/objects/Event_Occasion_Insights__c/fields/Occasion_Based_Dormancy_Risk__c.field-meta.xml
<CustomField>
    <fullName>Occasion_Based_Dormancy_Risk__c</fullName>
    <label>Occasion-Based Dormancy Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>