force-app/main/default/objects/Event_Occasion_Insights__c/fields/Occasion_Campaign_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Occasion_Campaign_Eligibility__c</fullName>
    <label>Occasion Campaign Eligibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>