force-app/main/default/objects/Event_Occasion_Insights__c/fields/Occasion_Date__c.field-meta.xml
<CustomField>
    <fullName>Occasion_Date__c</fullName>
    <label>Occasion Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>