force-app/main/default/objects/Event_Occasion_Insights__c/fields/Occasion_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Occasion_Frequency__c</fullName>
    <label>Occasion Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>