force-app/main/default/objects/Event_Occasion_Insights__c/fields/Occasion_Gift_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Occasion_Gift_Preferences__c</fullName>
    <label>Occasion Gift Preferences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>