force-app/main/default/objects/Event_Occasion_Insights__c/fields/Occasion_Importance_Level__c.field-meta.xml
<CustomField>
    <fullName>Occasion_Importance_Level__c</fullName>
    <label>Occasion Importance Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>