force-app/main/default/objects/Event_Occasion_Insights__c/fields/Occasion_Linked_Coupon_Used__c.field-meta.xml
<CustomField>
    <fullName>Occasion_Linked_Coupon_Used__c</fullName>
    <label>Occasion-Linked Coupon Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>