force-app/main/default/objects/Event_Occasion_Insights__c/fields/Occasion_Month__c.field-meta.xml
<CustomField>
    <fullName>Occasion_Month__c</fullName>
    <label>Occasion Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>