force-app/main/default/objects/Event_Occasion_Insights__c/fields/Occasion_Purchase_Amount_Last_Event__c.field-meta.xml
<CustomField>
    <fullName>Occasion_Purchase_Amount_Last_Event__c</fullName>
    <label>Occasion Purchase Amount (Last Event)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>