force-app/main/default/objects/Event_Occasion_Insights__c/fields/Occasion_Reminder_Consent__c.field-meta.xml
<CustomField>
    <fullName>Occasion_Reminder_Consent__c</fullName>
    <label>Occasion Reminder Consent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>