force-app/main/default/objects/Event_Occasion_Insights__c/fields/Occasion_Wishlist_Available__c.field-meta.xml
<CustomField>
    <fullName>Occasion_Wishlist_Available__c</fullName>
    <label>Occasion Wishlist Available?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>