force-app/main/default/objects/Event_Occasion_Insights__c/fields/Past_Occasion_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Past_Occasion_Purchase__c</fullName>
    <label>Past Occasion Purchase?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>