force-app/main/default/objects/Event_Occasion_Insights__c/fields/Planned_Purchase_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Planned_Purchase_Timeline__c</fullName>
    <label>Planned Purchase Timeline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>