force-app/main/default/objects/Event_Occasion_Insights__c/fields/Preferred_Reminder_Channel__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Reminder_Channel__c</fullName>
    <label>Preferred Reminder Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>