force-app/main/default/objects/Event_Occasion_Insights__c/fields/Reminder_Response_Rate__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Response_Rate__c</fullName>
    <label>Reminder Response Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>