force-app/main/default/objects/Event_Occasion_Insights__c/fields/Upcoming_Occasion_Type__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_Occasion_Type__c</fullName>
    <label>Upcoming Occasion Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>