force-app/main/default/objects/Event_Occasion_Insights__c/fields/Wedding_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Wedding_Lifecycle_Stage__c</fullName>
    <label>Wedding Lifecycle Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>